tests/NormalTests/paczka1/small_fuzzy/16710274.err
Error in line 5: S5Cc A1 27,8
Error in line 6: S5Cc A52 1,2
